0.8.2
-----
1. If queue page contains all tracks, then iterate these to determine total
   duration.

0.8.1
-----
 1. Lazy-load now-playing images.
 2. Set lazy-load error image to default cover.
 3. Always use lazy-load images, as can set error image easily.
 4. Set correct mouse-pointer for jumplist.
 5. Default to using mysqueezebox to resize remote images.
 6. If config does not have useLocalImageproxy, then default to mysqueezebox.
 7. Reduce size of grid row if there are no sub-titles.
 8. Custom icons for artists, albumartists, and compilations.
 9. Clear cache if artist list is toggled between single list or separate
    artists and album artists.
10. Only hide home button if screen is less than 290px wide.
11. Ignore negative coverid attributes.
12. Fix moving items to lower position in list.
13. Give shadow to letter-overlay.
14. Fix cover grid sizing, and jump list activation.
15. Pass URL query params when index.html selects variant.
16. Now toolbar should get track count and duration from queue page, as queue
    page handles current track duration changing. (Mobile only)

0.8.0
-----
 1. If rating from server is undefined, but TrackStat is installed, then show
    rating as 0.
 2. Longpress on 'Browse' navigation button (whilst on 'Browse' view) will
    navigate to top (home).
 3. Clear selection when go back/home.
 4. Work-around item selection not updating until redraw if using large lists.
 5. Handle play queue updates whilst items are selected.
 6. Allow playlist tracks to be selected.
 7. Playlist editing; moving and removing of tracks.
 8. Allow drag'n'drop re-ordering of favourites if not set to sort. Can only
    move a single favourite at a time, not a selection.
 9. Calculate mobile/portrait padding when now-playing is initially shown.
10. Place on/off toggle button next to each player in menu.
11. Add 'Group Players' and 'Standard Players' headers to player selection menu,
    where appropriate.
12. Fix 'Set sleep for all players'