@@ -19,7 +19,7 @@ const LMS_SKIN_LANGUAGES = new Set(['de', 'en', 'en-gb', 'fr', 'nl']);
 const LMS_MATERIAL_UI_DEFAULT_PREF = "plugin.material-skin:defaults";
 const LMS_MATERIAL_DEFAULT_PINNED_PREF = "plugin.material-skin:pinned";
 const LMS_VOLUME_CLOSE_TIMEOUT = 10000;
-const LMS_CACHE_VERSION = 8;
+const LMS_CACHE_VERSION = 9;
 const LMS_LIST_ELEMENT_SIZE = 57;
 const LMS_BLANK_COVER = "/music/0/cover.jpg";
 
