@@ -2,6 +2,8 @@
 -----
 1. If queue page contains all tracks, then iterate these to determine total
    duration.
+2. When getting track lists (for albums, or queue) only request rating if
+   rating support is enabled (via TrackStat).
 
 0.8.1
 -----
